--- a/.github/workflows/ci-enhanced.yml
+++ b/.github/workflows/ci-enhanced.yml
@@ -32,6 +32,10 @@ env:
   SECURITY_SCAN_TIMEOUT: 15
   PERFORMANCE_TEST_TIMEOUT: 20
   ROLLBACK_TIMEOUT: 5
+  # ACT local testing environment variables
+  ACT_RUNNER_NAME: ${{ env.ACT && 'act-runner' || 'github-runner' }}
+  ACT_TEST_MODE: ${{ env.ACT || 'false' }}
+  GITHUB_API_AVAILABLE: ${{ !env.ACT || 'false' }}
 
 permissions:
   contents: read
@@ -83,8 +87,8 @@ jobs:
             echo "::notice::Skipping due to commit message"
           fi
           
-          # Analyze changed files
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+          # Analyze changed files (skip in ACT environment)
+          if [[ "${{ github.event_name }}" == "pull_request" ]] && [[ "${{ env.ACT_TEST_MODE }}" != "true" ]]; then
             CHANGED_FILES=$(gh pr diff ${{ github.event.pull_request.number }} --name-only || echo "")
             
             # Check for security-sensitive changes
@@ -128,6 +132,7 @@ jobs:
           echo "- Performance Test: $PERFORMANCE_REQUIRED" >> $GITHUB_STEP_SUMMARY
         env:
           GH_TOKEN: ${{ github.token }}
+          # ACT compatibility: Handle missing GitHub API access gracefully
 
   architecture-compliance:
     name: 🏗️ Architecture Compliance
@@ -187,12 +192,21 @@ jobs:
           fi
           
       - name: Upload compliance report
-        if: always()
+        # ACT compatibility: Skip artifact upload in local testing
+        if: always() && env.ACT != 'true'
         uses: actions/upload-artifact@v4
         with:
           name: architecture-compliance-report
           path: compliance_report.json
           retention-days: 30
+          
+      - name: Store compliance report locally (ACT)
+        # ACT compatibility: Store report locally when running with ACT
+        if: always() && env.ACT == 'true'
+        run: |
+          echo "::notice::ACT Mode - Storing compliance report locally"
+          mkdir -p /tmp/act-artifacts/architecture-compliance-report
+          cp compliance_report.json /tmp/act-artifacts/architecture-compliance-report/ || true
 
   # ==========================================
   # PHASE 2: Security Scanning
@@ -315,7 +329,8 @@ jobs:
           fi
           
       - name: Upload security reports
-        if: always()
+        # ACT compatibility: Skip artifact upload in local testing
+        if: always() && env.ACT != 'true'
         uses: actions/upload-artifact@v4
         with:
           name: security-scan-reports
@@ -325,6 +340,14 @@ jobs:
             semgrep_report.json
             security_summary.md
           retention-days: 90
+          
+      - name: Store security reports locally (ACT)
+        # ACT compatibility: Store reports locally when running with ACT
+        if: always() && env.ACT == 'true'
+        run: |
+          echo "::notice::ACT Mode - Storing security reports locally"
+          mkdir -p /tmp/act-artifacts/security-scan-reports
+          cp bandit_report.json safety_report.json semgrep_report.json security_summary.md /tmp/act-artifacts/security-scan-reports/ || true
 
   # ==========================================
   # PHASE 3: Core Testing with Coverage
@@ -352,10 +375,20 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Download test artifacts
+        # ACT compatibility: Skip artifact download in local testing
+        if: env.ACT != 'true'
         uses: actions/download-artifact@v4
         with:
           pattern: test-results-*
           merge-multiple: true
+          
+      - name: Setup test artifacts (ACT)
+        # ACT compatibility: Create dummy test results for local testing
+        if: env.ACT == 'true'
+        run: |
+          echo "::notice::ACT Mode - Creating dummy test artifacts"
+          mkdir -p test-results
+          echo '{"totals": {"percent_covered": 85.0}}' > coverage_report.json || true
           
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -401,7 +434,8 @@ jobs:
           fi
           
       - name: Comment coverage on PR
-        if: github.event_name == 'pull_request'
+        # ACT compatibility: Skip GitHub API calls in local testing
+        if: github.event_name == 'pull_request' && env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -425,6 +459,8 @@ jobs:
             });
             
       - name: Upload coverage reports
+        # ACT compatibility: Skip artifact upload in local testing
+        if: env.ACT != 'true'
         uses: actions/upload-artifact@v4
         with:
           name: coverage-reports
@@ -434,6 +470,15 @@ jobs:
             htmlcov/
             coverage_badge.svg
           retention-days: 30
+          
+      - name: Store coverage reports locally (ACT)
+        # ACT compatibility: Store reports locally when running with ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "::notice::ACT Mode - Storing coverage reports locally"
+          mkdir -p /tmp/act-artifacts/coverage-reports
+          cp coverage_report.json coverage.xml coverage_badge.svg /tmp/act-artifacts/coverage-reports/ || true
+          cp -r htmlcov /tmp/act-artifacts/coverage-reports/ || true
 
   # ==========================================
   # PHASE 4: Performance Testing
@@ -555,7 +600,8 @@ jobs:
           cat performance_summary.md >> $GITHUB_STEP_SUMMARY
           
       - name: Upload performance reports
-        if: always()
+        # ACT compatibility: Skip artifact upload in local testing
+        if: always() && env.ACT != 'true'
         uses: actions/upload-artifact@v4
         with:
           name: performance-test-reports
@@ -564,6 +610,14 @@ jobs:
             load_test_results.json
             performance_summary.md
           retention-days: 30
+          
+      - name: Store performance reports locally (ACT)
+        # ACT compatibility: Store reports locally when running with ACT
+        if: always() && env.ACT == 'true'
+        run: |
+          echo "::notice::ACT Mode - Storing performance reports locally"
+          mkdir -p /tmp/act-artifacts/performance-test-reports
+          cp benchmark_results.json load_test_results.json performance_summary.md /tmp/act-artifacts/performance-test-reports/ || true
 
   # ==========================================
   # PHASE 5: Staging Deployment and Validation
@@ -705,7 +759,8 @@ jobs:
           echo "critical_failure=$CRITICAL_FAILURE" >> $GITHUB_OUTPUT
           
       - name: Trigger automatic rollback
-        if: steps.analyze.outputs.rollback_required == 'true'
+        # ACT compatibility: Skip GitHub API workflow dispatch in local testing
+        if: steps.analyze.outputs.rollback_required == 'true' && env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -725,7 +780,8 @@ jobs:
             });
             
       - name: Create failure incident
-        if: steps.analyze.outputs.critical_failure == 'true'
+        # ACT compatibility: Skip GitHub API issue creation in local testing
+        if: steps.analyze.outputs.critical_failure == 'true' && env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -790,7 +846,12 @@ jobs:
           echo "Running production smoke tests..."
           
           # Test production endpoints (read-only)
-          PROD_URL="https://api.netra.ai"  # Replace with actual production URL
+          # ACT compatibility: Use localhost for local testing
+          if [[ "${{ env.ACT_TEST_MODE }}" == "true" ]]; then
+            PROD_URL="http://localhost:8000"
+          else
+            PROD_URL="https://api.netra.ai"  # Replace with actual production URL
+          fi
           
           # Health check
           curl -f "$PROD_URL/health" || echo "Production health check failed"
@@ -901,7 +962,8 @@ jobs:
           cat pipeline_report.md >> $GITHUB_STEP_SUMMARY
           
       - name: Post PR comment with results
-        if: github.event_name == 'pull_request'
+        # ACT compatibility: Skip GitHub API PR comments in local testing
+        if: github.event_name == 'pull_request' && env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -925,7 +987,8 @@ jobs:
             });
             
       - name: Set commit status
-        if: always()
+        # ACT compatibility: Skip GitHub API commit status in local testing
+        if: always() && env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
