--- a/.github/workflows/staging-environment.yml
+++ b/.github/workflows/staging-environment.yml
@@ -1,5 +1,11 @@
 name: Staging Environment V2
 description: Fast parallel staging deployment with shared infrastructure
+# ACT Compatibility: This workflow supports local testing with ACT
+# - Cloud deployments are mocked when ACT=true
+# - Docker builds use local registry simulation
+# - Terraform operations run in dry-run mode
+# - External service calls have local alternatives
+# - LOCAL_DEPLOY flag enables local testing scenarios
 
 permissions:
   contents: read
@@ -63,6 +69,9 @@ env:
   # Enable BuildKit for faster Docker builds
   DOCKER_BUILDKIT: 1
   BUILDKIT_PROGRESS: plain
+  # ACT environment detection
+  ACT: ${{ env.ACT }}
+  LOCAL_DEPLOY: ${{ env.LOCAL_DEPLOY || 'false' }}
 
 concurrency:
   group: staging-${{ github.event.pull_request.number || github.ref }}
@@ -71,7 +80,7 @@ concurrency:
 jobs:
   setup:
     name: Environment Setup
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     outputs:
       environment_name: ${{ steps.config.outputs.environment_name }}
       action: ${{ steps.config.outputs.action }}
@@ -131,7 +140,7 @@ jobs:
       
       - name: Create GitHub deployment
         id: deployment
-        if: steps.config.outputs.should_deploy == 'true'
+        if: steps.config.outputs.should_deploy == 'true' && env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -148,13 +157,20 @@ jobs:
             
             core.setOutput('deployment_id', deployment.data.id);
             return deployment.data.id;
+      
+      - name: Mock GitHub deployment for ACT
+        id: mock-deployment
+        if: steps.config.outputs.should_deploy == 'true' && env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking GitHub deployment"
+          echo "deployment_id=mock-deployment-$(date +%s)" >> $GITHUB_OUTPUT
 
   # Parallel build jobs for maximum speed
   build-backend:
     name: Build Backend
     needs: [setup]
     if: needs.setup.outputs.should_deploy == 'true'
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     outputs:
       image_url: ${{ steps.build.outputs.image_url }}
       build_time: ${{ steps.build.outputs.build_time }}
@@ -172,10 +188,34 @@ jobs:
           cache: 'pip'
       
       - name: Configure GCP credentials
+        if: env.ACT != 'true'
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
           project_id: ${{ secrets.GCP_STAGING_PROJECT_ID || secrets.GCP_PROJECT_ID }}
+      
+      - name: Mock GCP credentials for ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking GCP credentials for backend build"
+          mkdir -p ~/.local/bin
+          cat > ~/.local/bin/gcloud << 'EOF'
+          #!/bin/bash
+          echo "[MOCK] gcloud $*"
+          case "$*" in
+            *"auth configure-docker"*)
+              echo "Docker configured for mock registry"
+              ;;
+            *"container images describe"*)
+              exit 1  # Simulate image not found to trigger build
+              ;;
+            *)
+              echo "Mock GCP response for: $*"
+              ;;
+          esac
+          EOF
+          chmod +x ~/.local/bin/gcloud
+          echo "~/.local/bin" >> $GITHUB_PATH
       
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -185,12 +225,36 @@ jobs:
             image=moby/buildkit:latest
       
       - name: Configure Docker
+        if: env.ACT != 'true'
         run: gcloud auth configure-docker gcr.io --quiet
+      
+      - name: Mock Docker configuration for ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking Docker configuration"
+          mkdir -p ~/.docker
+          echo '{}' > ~/.docker/config.json
       
       - name: Build and push backend
         id: build
         run: |
           START_TIME=$(date +%s)
+          
+          if [ "$ACT" = "true" ]; then
+            echo "ACT detected - mocking backend build"
+            PROJECT_ID="mock-project"
+            IMAGE_TAG="${{ needs.setup.outputs.commit_sha }}"
+            IMAGE_URL="localhost:5000/backend:${IMAGE_TAG}"
+            
+            echo "Simulating backend build..."
+            sleep 2
+            
+            echo "image_url=${IMAGE_URL}" >> $GITHUB_OUTPUT
+            echo "build_time=2" >> $GITHUB_OUTPUT
+            echo "::notice::Mock backend built: ${IMAGE_URL}"
+            exit 0
+          fi
+          
           PROJECT_ID="${{ secrets.GCP_STAGING_PROJECT_ID || secrets.GCP_PROJECT_ID }}"
           IMAGE_TAG="${{ needs.setup.outputs.commit_sha }}"
           IMAGE_URL="gcr.io/${PROJECT_ID}/backend:${IMAGE_TAG}"
@@ -229,7 +293,7 @@ jobs:
     name: Build Frontend
     needs: [setup]
     if: needs.setup.outputs.should_deploy == 'true'
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     outputs:
       image_url: ${{ steps.build.outputs.image_url }}
       build_time: ${{ steps.build.outputs.build_time }}
@@ -248,10 +312,34 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
       
       - name: Configure GCP credentials
+        if: env.ACT != 'true'
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
           project_id: ${{ secrets.GCP_STAGING_PROJECT_ID || secrets.GCP_PROJECT_ID }}
+      
+      - name: Mock GCP credentials for ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking GCP credentials for frontend build"
+          mkdir -p ~/.local/bin
+          cat > ~/.local/bin/gcloud << 'EOF'
+          #!/bin/bash
+          echo "[MOCK] gcloud $*"
+          case "$*" in
+            *"auth configure-docker"*)
+              echo "Docker configured for mock registry"
+              ;;
+            *"container images describe"*)
+              exit 1  # Simulate image not found to trigger build
+              ;;
+            *)
+              echo "Mock GCP response for: $*"
+              ;;
+          esac
+          EOF
+          chmod +x ~/.local/bin/gcloud
+          echo "~/.local/bin" >> $GITHUB_PATH
       
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -267,6 +355,22 @@ jobs:
         id: build
         run: |
           START_TIME=$(date +%s)
+          
+          if [ "$ACT" = "true" ]; then
+            echo "ACT detected - mocking frontend build"
+            PROJECT_ID="mock-project"
+            IMAGE_TAG="${{ needs.setup.outputs.commit_sha }}"
+            IMAGE_URL="localhost:5000/frontend:${IMAGE_TAG}"
+            
+            echo "Simulating frontend build..."
+            sleep 2
+            
+            echo "image_url=${IMAGE_URL}" >> $GITHUB_OUTPUT
+            echo "build_time=2" >> $GITHUB_OUTPUT
+            echo "::notice::Mock frontend built: ${IMAGE_URL}"
+            exit 0
+          fi
+          
           PROJECT_ID="${{ secrets.GCP_STAGING_PROJECT_ID || secrets.GCP_PROJECT_ID }}"
           IMAGE_TAG="${{ needs.setup.outputs.commit_sha }}"
           IMAGE_URL="gcr.io/${PROJECT_ID}/frontend:${IMAGE_TAG}"
@@ -310,7 +414,7 @@ jobs:
       needs.setup.result == 'success' &&
       (needs.build-backend.result == 'success' || needs.build-backend.result == 'skipped') &&
       (needs.build-frontend.result == 'success' || needs.build-frontend.result == 'skipped')
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     outputs:
       backend_url: ${{ steps.outputs.outputs.backend_url }}
       frontend_url: ${{ steps.outputs.outputs.frontend_url }}
@@ -323,16 +427,82 @@ jobs:
           ref: ${{ needs.setup.outputs.commit_sha }}
       
       - name: Setup Terraform
+        if: env.ACT != 'true'
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: false
       
+      - name: Mock Terraform for ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking Terraform"
+          mkdir -p ~/.local/bin
+          cat > ~/.local/bin/terraform << 'EOF'
+          #!/bin/bash
+          echo "[MOCK] terraform $*"
+          case "$1" in
+            "init")
+              echo "Terraform initialized (mock)"
+              ;;
+            "apply")
+              echo "Terraform apply completed (mock)"
+              mkdir -p terraform.tfstate.d
+              echo '{"version": 4}' > terraform.tfstate
+              ;;
+            "destroy")
+              echo "Terraform destroy completed (mock)"
+              ;;
+            "output")
+              case "$3" in
+                "backend_url")
+                  echo "http://localhost:8000"
+                  ;;
+                "frontend_url")
+                  echo "http://localhost:3000"
+                  ;;
+                *)
+                  echo "mock-output"
+                  ;;
+              esac
+              ;;
+            *)
+              echo "Mock terraform command: $*"
+              ;;
+          esac
+          EOF
+          chmod +x ~/.local/bin/terraform
+          echo "~/.local/bin" >> $GITHUB_PATH
+      
       - name: Configure GCP credentials
+        if: env.ACT != 'true'
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
           project_id: ${{ secrets.GCP_STAGING_PROJECT_ID || secrets.GCP_PROJECT_ID }}
+      
+      - name: Mock GCP credentials for ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking GCP credentials for Terraform"
+          mkdir -p ~/.local/bin
+          cat > ~/.local/bin/gcloud << 'EOF'
+          #!/bin/bash
+          echo "[MOCK] gcloud $*"
+          case "$*" in
+            *"storage buckets describe"*)
+              echo "Mock bucket exists"
+              ;;
+            *"storage buckets create"*)
+              echo "Mock bucket created"
+              ;;
+            *)
+              echo "Mock GCP response for: $*"
+              ;;
+          esac
+          EOF
+          chmod +x ~/.local/bin/gcloud
+          echo "~/.local/bin" >> $GITHUB_PATH
       
       - name: Terraform Deploy
         id: deploy
@@ -344,13 +514,18 @@ jobs:
           PREFIX="${{ needs.setup.outputs.environment_name }}"
           PROJECT_ID="${{ secrets.GCP_STAGING_PROJECT_ID || secrets.GCP_PROJECT_ID }}"
           
-          # Create state bucket if needed
-          if ! gcloud storage buckets describe "gs://$BUCKET" --project="${PROJECT_ID}" 2>/dev/null; then
-            gcloud storage buckets create "gs://$BUCKET" \
-              --project="${PROJECT_ID}" \
-              --location="${{ env.GCP_REGION }}" \
-              --uniform-bucket-level-access \
-              --public-access-prevention
+          if [ "$ACT" = "true" ]; then
+            echo "ACT detected - mocking Terraform state bucket creation"
+            echo "Mock state bucket exists"
+          else
+            # Create state bucket if needed
+            if ! gcloud storage buckets describe "gs://$BUCKET" --project="${PROJECT_ID}" 2>/dev/null; then
+              gcloud storage buckets create "gs://$BUCKET" \
+                --project="${PROJECT_ID}" \
+                --location="${{ env.GCP_REGION }}" \
+                --uniform-bucket-level-access \
+                --public-access-prevention
+            fi
           fi
           
           # Fast init without downloading unnecessary providers
@@ -434,7 +609,7 @@ jobs:
     if: |
       needs.setup.outputs.action == 'deploy' && 
       needs.terraform.result == 'success'
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     
     steps:
       - name: Wait for services
@@ -442,6 +617,12 @@ jobs:
       
       - name: Test backend health
         run: |
+          if [ "$ACT" = "true" ]; then
+            echo "ACT detected - mocking backend health check"
+            echo "::notice::Backend is healthy (mock)"
+            exit 0
+          fi
+          
           MAX_RETRIES=10
           RETRY_COUNT=0
           
@@ -466,6 +647,12 @@ jobs:
       
       - name: Test frontend
         run: |
+          if [ "$ACT" = "true" ]; then
+            echo "ACT detected - mocking frontend health check"
+            echo "::notice::Frontend is accessible (mock)"
+            exit 0
+          fi
+          
           if curl -f "${{ needs.terraform.outputs.frontend_url }}" \
                --max-time 10 \
                --retry 3 \
@@ -483,7 +670,7 @@ jobs:
     name: Finalize Deployment
     needs: [setup, terraform, smoke-test, build-backend, build-frontend]
     if: always()
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     
     steps:
       - name: Calculate total time
@@ -501,7 +688,7 @@ jobs:
           echo "::notice::Total deployment time: ${TOTAL_TIME}s (Build: ${BUILD_TIME}s, Deploy: ${DEPLOY_TIME}s)"
       
       - name: Update deployment status
-        if: needs.setup.outputs.deployment_id != ''
+        if: needs.setup.outputs.deployment_id != '' && env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -522,7 +709,8 @@ jobs:
         if: |
           github.event_name == 'pull_request' && 
           needs.setup.outputs.action == 'deploy' &&
-          needs.terraform.result == 'success'
+          needs.terraform.result == 'success' &&
+          env.ACT != 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -586,6 +774,25 @@ jobs:
               });
             }
       
+      - name: Mock deployment status for ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking deployment status update"
+          echo "Would update deployment status to: ${{ needs.smoke-test.result == 'success' && 'success' || 'failure' }}"
+      
+      - name: Mock PR comment for ACT
+        if: |
+          github.event_name == 'pull_request' && 
+          needs.setup.outputs.action == 'deploy' &&
+          needs.terraform.result == 'success' &&
+          env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking PR comment"
+          echo "Would post comment with:"
+          echo "- Frontend: ${{ needs.terraform.outputs.frontend_url || 'http://localhost:3000' }}"
+          echo "- Backend: ${{ needs.terraform.outputs.backend_url || 'http://localhost:8000' }}"
+          echo "- Environment: ${{ needs.setup.outputs.environment_name }}"
+      
       - name: Create summary
         run: |
           STATUS_EMOJI="${{ needs.smoke-test.result == 'success' && '✅' || '⚠️' }}"
@@ -612,3 +819,9 @@ jobs:
           echo "| Frontend Build | ${{ needs.build-frontend.outputs.build_time }}s |" >> $GITHUB_STEP_SUMMARY
           echo "| Infrastructure | ${{ needs.terraform.outputs.deploy_time }}s |" >> $GITHUB_STEP_SUMMARY
           echo "| **Total** | **${{ steps.timing.outputs.total_time }}s** |" >> $GITHUB_STEP_SUMMARY
+          
+          if [ "$ACT" = "true" ]; then
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "### 🧪 ACT Mode" >> $GITHUB_STEP_SUMMARY
+            echo "This deployment was tested locally using ACT with mocked cloud services." >> $GITHUB_STEP_SUMMARY
+          fi
