--- a/.github/workflows/staging-workflows/build-backend.yml
+++ b/.github/workflows/staging-workflows/build-backend.yml
@@ -1,5 +1,10 @@
 name: Build Backend
 description: Build and push backend Docker image
+# ACT Compatibility: This workflow supports local testing with ACT
+# - Docker builds use local registry when ACT=true
+# - GCP authentication is mocked in ACT mode
+# - Build process simulated for faster local testing
+# - Image tagging adapted for local development
 
 on:
   workflow_call:
@@ -24,7 +29,7 @@ on:
 jobs:
   build:
     name: Build Backend Image
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     timeout-minutes: 30
     outputs:
       image_tag: ${{ steps.build.outputs.image_tag }}
@@ -46,13 +51,36 @@ jobs:
         uses: docker/setup-buildx-action@v3
       
       - name: Configure GCP credentials
+        if: env.ACT != 'true'
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_STAGING_SA_KEY }}
       
       - name: Configure Docker for GCR
+        if: env.ACT != 'true'
         run: |
           gcloud auth configure-docker gcr.io
+      
+      - name: Mock GCP and Docker configuration for ACT
+        if: env.ACT == 'true'
+        run: |
+          echo "ACT detected - mocking GCP credentials and Docker configuration"
+          mkdir -p ~/.local/bin ~/.docker
+          cat > ~/.local/bin/gcloud << 'EOF'
+          #!/bin/bash
+          echo "[MOCK] gcloud $*"
+          case "$*" in
+            *"auth configure-docker"*)
+              echo "Docker configured for mock registry"
+              ;;
+            *)
+              echo "Mock GCP response for: $*"
+              ;;
+          esac
+          EOF
+          chmod +x ~/.local/bin/gcloud
+          echo '{}' > ~/.docker/config.json
+          echo "~/.local/bin" >> $GITHUB_PATH
       
       - name: Generate image tag
         id: tag
@@ -66,18 +94,36 @@ jobs:
         id: build
         run: |
           IMAGE_TAG="${{ steps.tag.outputs.image_tag }}"
-          IMAGE_URL="${{ inputs.registry_url }}/${{ secrets.GCP_PROJECT_ID }}/netra-backend:$IMAGE_TAG"
           
-          # Build with cache
-          docker buildx build \
-            --platform linux/amd64 \
-            --cache-from type=registry,ref=${{ inputs.registry_url }}/${{ secrets.GCP_PROJECT_ID }}/netra-backend:cache \
-            --cache-to type=registry,ref=${{ inputs.registry_url }}/${{ secrets.GCP_PROJECT_ID }}/netra-backend:cache,mode=max \
-            --build-arg COMMIT_SHA=${{ inputs.commit_sha }} \
-            --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
-            --tag $IMAGE_URL \
-            --push \
-            --file app/Dockerfile \
-            ./app
+          if [ "$ACT" = "true" ]; then
+            echo "ACT detected - mocking backend Docker build"
+            IMAGE_URL="localhost:5000/netra-backend:$IMAGE_TAG"
+            
+            echo "Simulating backend build process..."
+            echo "Would build with:"
+            echo "  - Platform: linux/amd64"
+            echo "  - Commit SHA: ${{ inputs.commit_sha }}"
+            echo "  - Build Date: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+            echo "  - Image URL: $IMAGE_URL"
+            
+            # Simulate build time
+            sleep 2
+            echo "Mock build complete!"
+          else
+            IMAGE_URL="${{ inputs.registry_url }}/${{ secrets.GCP_PROJECT_ID }}/netra-backend:$IMAGE_TAG"
+            
+            # Build with cache
+            docker buildx build \
+              --platform linux/amd64 \
+              --cache-from type=registry,ref=${{ inputs.registry_url }}/${{ secrets.GCP_PROJECT_ID }}/netra-backend:cache \
+              --cache-to type=registry,ref=${{ inputs.registry_url }}/${{ secrets.GCP_PROJECT_ID }}/netra-backend:cache,mode=max \
+              --build-arg COMMIT_SHA=${{ inputs.commit_sha }} \
+              --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
+              --tag $IMAGE_URL \
+              --push \
+              --file app/Dockerfile \
+              ./app
+          fi
           
           echo "image_url=$IMAGE_URL" >> $GITHUB_OUTPUT
+          echo "::notice::Backend image: $IMAGE_URL"
