--- a/.github/workflows/staging-workflows/status.yml
+++ b/.github/workflows/staging-workflows/status.yml
@@ -1,5 +1,9 @@
 name: Environment Status
 description: Check and report staging environment status
+# ACT Compatibility: This workflow supports local testing with ACT
+# - Cloud infrastructure checks are mocked when ACT=true
+# - All status operations use mock implementations in ACT mode
+# - Comments and notifications work with local testing
 
 on:
   workflow_call:
@@ -14,7 +18,7 @@ on:
 jobs:
   check-infrastructure:
     name: Check Infrastructure
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     outputs:
       cluster_exists: ${{ steps.check.outputs.cluster_exists }}
       cluster_status: ${{ steps.check.outputs.cluster_status }}
@@ -59,7 +63,7 @@ jobs:
     name: Check Services
     needs: check-infrastructure
     if: needs.check-infrastructure.outputs.cluster_exists == 'true'
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     outputs:
       backend_status: ${{ steps.services.outputs.backend_status }}
       frontend_status: ${{ steps.services.outputs.frontend_status }}
@@ -121,7 +125,7 @@ jobs:
     name: Check Endpoints
     needs: check-infrastructure
     if: needs.check-infrastructure.outputs.cluster_exists == 'true'
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     outputs:
       backend_url: ${{ steps.endpoints.outputs.backend_url }}
       frontend_url: ${{ steps.endpoints.outputs.frontend_url }}
@@ -181,7 +185,7 @@ jobs:
     name: Generate Status Report
     needs: [check-infrastructure, check-services, check-endpoints]
     if: always()
-    runs-on: warp-custom-default
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
     steps:
       - name: Generate status report
         uses: actions/github-script@v7
