--- a/.github/workflows/test-smoke.yml
+++ b/.github/workflows/test-smoke.yml
@@ -1,5 +1,8 @@
 name: Smoke Tests
 
+# ACT Compatibility: This workflow is designed to work with both GitHub Actions and ACT (act)
+# Use: act --secret-file .secrets --env-file .env.act push
+
 on:
   push:
     branches-ignore:
@@ -24,6 +27,8 @@ concurrency:
 
 env:
   CONFIG_FILE: .github/workflow-config.yml
+  # ACT compatibility: detect ACT environment
+  ACT: ${{ env.ACT || 'false' }}
 
 permissions:
   contents: read
@@ -34,8 +39,8 @@ permissions:
 jobs:
   smoke-test:
     name: Quick Validation (<30s)
-    runs-on: warp-custom-default  # TODO: Use vars.RUNNER_TYPE_DEFAULT when available
-    timeout-minutes: 5  # Overridden by config in steps
+    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}  # ACT compatibility: fallback to ubuntu-latest
+    timeout-minutes: ${{ env.ACT && '3' || '5' }}  # ACT compatibility: shorter timeout for local runs
     
     outputs:
       status: ${{ steps.test.outcome }}
@@ -54,11 +59,19 @@ jobs:
         run: |
           if [ -f "${{ env.CONFIG_FILE }}" ]; then
             echo "::notice::Loading configuration from ${{ env.CONFIG_FILE }}"
-            # Extract configuration values using yq
+            # Extract configuration values using yq (ACT compatibility)
             if ! command -v yq &> /dev/null; then
               echo "Installing yq..."
-              wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-              chmod +x /usr/local/bin/yq
+              if [ "${{ env.ACT }}" = "true" ]; then
+                # For ACT, try to install via package manager first
+                sudo apt-get update && sudo apt-get install -y yq || {
+                  wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+                  sudo chmod +x /usr/local/bin/yq
+                }
+              else
+                wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+                chmod +x /usr/local/bin/yq
+              fi
             fi
             
             PYTHON_VERSION=$(yq '.global.versions.python // "3.11"' ${{ env.CONFIG_FILE }})
@@ -93,9 +106,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ steps.config.outputs.python_version || '3.11' }}
-          cache: 'pip'
+          cache: ${{ env.ACT && '' || 'pip' }}  # ACT compatibility: disable pip cache for ACT
           
       - name: Cache Dependencies
+        if: ${{ !env.ACT }}  # ACT compatibility: skip caching for ACT
         uses: actions/cache@v4
         with:
           path: |
@@ -135,7 +149,7 @@ jobs:
             --output smoke-report.md
             
       - name: Upload Results
-        if: always()
+        if: ${{ !env.ACT && always() }}  # ACT compatibility: skip artifact upload for ACT
         uses: actions/upload-artifact@v4
         with:
           name: smoke-test-results-${{ github.sha }}
@@ -143,9 +157,18 @@ jobs:
             test-results.json
             smoke-report.md
           retention-days: 7
+      
+      - name: Store results locally (ACT)
+        if: ${{ env.ACT && always() }}
+        run: |
+          # ACT compatibility: store results locally
+          mkdir -p act-results
+          cp -f test-results.json act-results/ 2>/dev/null || true
+          cp -f smoke-report.md act-results/ 2>/dev/null || true
+          echo "Smoke test results stored locally: act-results/"
           
       - name: Comment PR (if applicable)
-        if: github.event_name == 'pull_request' && always()
+        if: ${{ !env.ACT && github.event_name == 'pull_request' && always() }}  # ACT compatibility: skip PR comments for ACT
         uses: actions/github-script@v7
         with:
           script: |
@@ -188,7 +211,7 @@ jobs:
             }
             
       - name: Set Commit Status
-        if: always()
+        if: ${{ !env.ACT && always() }}  # ACT compatibility: skip commit status for ACT
         uses: actions/github-script@v7
         with:
           script: |
@@ -202,6 +225,21 @@ jobs:
               target_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
             });
             
+      - name: Local smoke test summary (ACT)
+        if: ${{ env.ACT && always() }}
+        run: |
+          # ACT compatibility: show local summary
+          echo "=== Smoke Test Results Summary (ACT) ==="
+          echo "Status: ${{ steps.test.outcome }}"
+          echo "Duration: ${{ steps.timer-end.outputs.duration }}"
+          echo "Environment: ACT (Local)"
+          if [ -f "smoke-report.md" ]; then
+            echo "--- Test Report ---"
+            cat smoke-report.md
+          fi
+          echo "Results stored in: act-results/"
+          echo "============================================"
+      
       - name: Fail if Tests Failed
         if: steps.test.outcome == 'failure'
         run: exit 1
